<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/lzr"
        android:width="130dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textColor="@color/blue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/lzr"
         />

    <Button
    android:id="@+id/create_game"
    android:layout_alignEnd="@+id/lzr"
    android:layout_alignRight="@+id/lzr"
    android:width="130dp"
        android:background="@color/blue_btn"
        android:textColor="@color/text_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/lzr"
    android:layout_below="@+id/lzr"
    android:layout_marginTop="30dp"
    android:text="@string/create_game"
    android:onClick="createGame"/>

    <Button
        android:id="@+id/teams"
        android:layout_alignEnd="@+id/lzr"
        android:layout_alignRight="@+id/lzr"
        android:width="130dp"
        android:background="@color/blue_btn"
        android:textColor="@color/text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_game"
        android:layout_marginTop="30dp"
        android:text="@string/teams"/>

    <Button
        android:id="@+id/create_team"
        android:layout_alignEnd="@+id/lzr"
        android:layout_alignRight="@+id/lzr"
        android:width="130dp"
        android:background="@color/blue_btn"
        android:textColor="@color/text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teams"
        android:layout_marginTop="30dp"
        android:text="@string/create_team"/>

    <Button
        android:id="@+id/quit"
        android:layout_alignEnd="@+id/lzr"
        android:layout_alignRight="@+id/lzr"
        android:width="130dp"
        android:background="@color/blue_btn"
        android:textColor="@color/text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_team"
        android:layout_marginTop="30dp"
        android:text="@string/quit"/>

</RelativeLayout>